...

<resources>

    <string name="app_name" translatable="false">Simplenote</string>
    <string name="app_launcher_name" translatable="false">@string/app_name</string>
    <string name="tag_hint">Add tag&#8230;</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="new_note">New Note</string>
    <string name="account">Account</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_email_message">By deleting the account for email %1$s, all notes created with this account will be permanently deleted. This action is not reversible.</string>
    <string name="request_received">Request Received</string>
    <string name="account_deletion_message">An email was sent to %1$s. Check your inbox and follow the instructions to confirm account deletion.\n\nYour account won\'t be deleted until we receive your confirmation.</string>
    <string name="error_ocurred_message">An error occurred. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="requesting_message">Requesting…</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="words">Words</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="tag_added_as_collaborator">%1$s added as a collaborator.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_tag_error_empty">Tags cannot be empty</string>
...
    <string name="notes_trashed">Notes trashed.</string>

    <!-- welcome note for new users -->
    <string name="welcome_note">Welcome to Simplenote Android!\nOpen this note for instructions.\n\nTo create a new note, tap the \"New Note\" button with the plus icon.\n\nTo search your notes, tap the \"Search\" button with the magnifying glass icon and enter any text. Simplenote will show you recent searches initially and suggested searches while entering text. Notes matching the entered text w
    <string name="confirm_delete_tag">Are you sure you want to delete this tag?</string>
    <string name="new_note_list">New note&#8230;</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- Sorting Options -->
    <string name="sort_by">Sort by</string>
    <string name="sort_newest_modified">Modified: Newest</string>
    <string name="sort_oldest_modified">Modified: Oldest</string>
...
    <string name="sort_oldest_created">Created: Oldest</string>
    <string name="sort_alphabetical">Name: A-Z</string>
    <string name="sort_alphabetical_reverse">Name: Z-A</string>

    <!-- Editor link options -->
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="view_map">View Map</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="link">Link</string>
    <string name="link_copied">Link copied.</string>
    <string name="link_copied_failure">Link could not be copied.</string>
    <string name="copy">Copy</string>
...
    <string name="log_in_add_widget">Log in to add this widget</string>
    <string name="log_in_use_widget">Log in to use widget</string>

    <!-- Android Wear strings, added here to make GlotPress translation easier -->
    <!-- Note: These need to be manually copied to the Wear app strings -->
    <string name="noted">Noted</string>
    <string name="error">Error</string>
    <string name="restore">Restore</string>
    <string name="history">History</string>
    <string name="error_history">Couldn\'t retrieve history.</string>
    <string name="wordpress_post">WordPress Post</string>
    <string name="send_post">Post</string>
    <string name="wordpress_post_draft">Set status to draft</string>
...
    <string name="simperium_error_password">Invalid password</string>
    <string name="simperium_footer_login">%1$s%2$s%3$sForgot password?%4$s</string>
    <string name="simperium_footer_login_url">https://app.simplenote.com/forgot/?email=%1$s</string>
    <string name="simperium_footer_signup">By creating an account, you agree to our %1$s%2$s%3$sTerms and Conditions%4$s</string>
    <string name="simperium_footer_signup_url">https://simplenote.com/terms/</string>
    <string name="simperium_hint_email">Email</string>
    <string name="simperium_hint_password">Password</string>
    <string name="simperium_subtitle">The simplest way to keep notes.</string>
    <string name="simperium_title" translatable="false">@string/app_name</string>
    <string name="simperium_url">http://simplenote.com</string>
    <string name="simperium_account_verification">Account Verification Required</string>
    <string name="simperium_account_verification_message">You must verify your email before logging in to your account.</string>
    <string name="simperium_account_verification_url">https://app.simplenote.com/account/verify-email/%1$s</string>
...
