...

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/preferences_container"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <include layout="@layout/iap_banner" />

...
